--- a/opera.html
+++ b/opera.html
@@ -23,37 +23,6 @@
           kneels at his feet.
      </h6>
      </p>
-     <h5 class="chorus">OPENING CHORUS</h5>
-     <h6 class="ALL">ALL:</h6>
-     <p>Pour, O pour the pirate sherry;
-          Fill, O fill the pirate glass;
-          And, to make us more than merry
-          Let the pirate bumper pass.</p>
-     <h6 class="SAMUEL">SAMUEL:</h6>
-     <p> For today our pirate 'prentice
-          Rises from indentures freed;
-          Strong his arm, and keen his scent is
-          He's a pirate now indeed! </p>
-     <h6 class="ALL">ALL:</h6>
-     <p> Here's good luck to Fred'ric's ventures!
-          Fred'ric's out of his indentures.</p>
-     <h6 class="SAMUEL">SAMUEL: </h6>
-     <p> Two and twenty, now he's rising,
-          And alone he's fit to fly,
-          Which we're bent on signalizing
-          With unusual revelry.</p>
-     <h6 class="ALL">ALL:</h6>
-     <p>Here's good luck to Fred'ric's ventures!
-          Fred'ric's out of his indentures.
-          Pour, O pour the pirate sherry;
-          Fill, O fill the pirate glass;
-          And, to make us more than merry
-          Let the pirate bumper pass.</p>
-     <p class="direction direction:hover">(FREDERIC rises and comes forward with PIRATE KING, who enters)</p>
-     <h6 class="KING"> KING: </h6>
-     <p>Yes, Frederic, from to-day you rank as a full-blown
-          member of our band.</p>
-     <h6 class="ALL">ALL:</h6 <p> Hurrah!</p>
 
      <h5 class="speech">SPEECH</h5>
      <h6 class="GIRLS">GIRLS:</h6>
@@ -86,6 +55,39 @@
           alone! Why, in all probability we are the first human
           beings who ever set foot on this enchanting spot.</p>
 
+     <h5 class="chorus">OPENING CHORUS</h5>
+     <h6 class="ALL">ALL:</h6>
+     <p>Pour, O pour the pirate sherry;
+          Fill, O fill the pirate glass;
+          And, to make us more than merry
+          Let the pirate bumper pass.</p>
+     <h6 class="SAMUEL">SAMUEL:</h6>
+     <p> For today our pirate 'prentice
+          Rises from indentures freed;
+          Strong his arm, and keen his scent is
+          He's a pirate now indeed! </p>
+     <h6 class="ALL">ALL:</h6>
+     <p> Here's good luck to Fred'ric's ventures!
+          Fred'ric's out of his indentures.</p>
+     <h6 class="SAMUEL">SAMUEL: </h6>
+     <p> Two and twenty, now he's rising,
+          And alone he's fit to fly,
+          Which we're bent on signalizing
+          With unusual revelry.</p>
+     <h6 class="ALL">ALL:</h6>
+     <p>Here's good luck to Fred'ric's ventures!
+          Fred'ric's out of his indentures.
+          Pour, O pour the pirate sherry;
+          Fill, O fill the pirate glass;
+          And, to make us more than merry
+          Let the pirate bumper pass.</p>
+     <p class="direction direction:hover">(FREDERIC rises and comes forward with PIRATE KING, who enters)</p>
+     <h6 class="KING"> KING: </h6>
+     <p>Yes, Frederic, from to-day you rank as a full-blown
+          member of our band.</p>
+     <h6 class="ALL">ALL:</h6 <p> Hurrah!</p>
+
+
      <h5 class="song">SONG — RUTH</h5>
      <h6 class="RUTH">RUTH: </h6>
      <p> When Frederic was a little lad he proved so brave and
@@ -100,6 +102,27 @@
           Though I'm a nurse, you might do worse than make your
           boy a pilot.
      </p>
+     <table>
+          <th> Character </th>
+          <th> Singer </th>
+          <th> offer </th>
+          <tr>
+               <td> KATE </td>
+               <td> Arman Malik </td>
+               <td> $2 Millions </td>
+          </tr>
+          <tr>
+               <td> SAMUEL </td>
+               <td> Arjit Singh </td>
+               <td> $5 Miillions </td>
+          </tr>
+          <tr>
+               <td> ISABEL </td>
+               <td> Devi Sri Prasad </td>
+               <td> $4 Millions </td>
+          </tr>
+
+     </table>
 
 
 
