--- a/opera.html
+++ b/opera.html
@@ -26,10 +26,10 @@
 
      <h5 class="speech">SPEECH</h5>
      <h6 class="GIRLS">GIRLS:</h6>
-     <p>Though the moments quickly die,
+     <p class="speech">Though the moments quickly die,
           Greet them gaily as they fly.</p>
      <h6 class="KATE">KATE:</h6>
-     <p>Far away from toil and care,
+     <p class="speech">Far away from toil and care,
           Revelling in fresh sea-air,
           Here we live and reign alone
           In a world that's all our own.
@@ -38,44 +38,44 @@
           We'll be queens, and make decrees—
           They may honour them who please.</p>
      <h6 class="GIRLS">GIRLS:</h6>
-     <p>We'll be queens, and make decrees—
+     <p class="speech">We'll be queens, and make decrees—
           They may honour them who please.
           Let us gaily tread the measure, etc.</p>
      <h6 class="KATE">KATE: </h6>
-     <p>What a picturesque spot! I wonder where we are!</p>
+     <p class="speech">What a picturesque spot! I wonder where we are!</p>
      <h6 class="EDITH">EDITH: </h6>
-     <p> And I wonder where Papa is. We have left him ever so
+     <p class="speech"> And I wonder where Papa is. We have left him ever so
           far behind.</p>
      <h6 class="ISABEL">ISABEL:</h6>
-     <p>Oh, he will be here presently! Remember poor Papa is
+     <p class="speech">Oh, he will be here presently! Remember poor Papa is
           not as young as we are, and we came over a rather
           difficult country.</p>
      <h6 class="KATE">KATE: </h6>
-     <p> But how thoroughly delightful it is to be so entirely
+     <p class="speech"> But how thoroughly delightful it is to be so entirely
           alone! Why, in all probability we are the first human
           beings who ever set foot on this enchanting spot.</p>
 
      <h5 class="chorus">OPENING CHORUS</h5>
      <h6 class="ALL">ALL:</h6>
-     <p>Pour, O pour the pirate sherry;
+     <p class="speech">Pour, O pour the pirate sherry;
           Fill, O fill the pirate glass;
           And, to make us more than merry
           Let the pirate bumper pass.</p>
      <h6 class="SAMUEL">SAMUEL:</h6>
-     <p> For today our pirate 'prentice
+     <p class="speech"> For today our pirate 'prentice
           Rises from indentures freed;
           Strong his arm, and keen his scent is
           He's a pirate now indeed! </p>
      <h6 class="ALL">ALL:</h6>
-     <p> Here's good luck to Fred'ric's ventures!
+     <p class="speech"> Here's good luck to Fred'ric's ventures!
           Fred'ric's out of his indentures.</p>
      <h6 class="SAMUEL">SAMUEL: </h6>
-     <p> Two and twenty, now he's rising,
+     <p class="speech"> Two and twenty, now he's rising,
           And alone he's fit to fly,
           Which we're bent on signalizing
           With unusual revelry.</p>
      <h6 class="ALL">ALL:</h6>
-     <p>Here's good luck to Fred'ric's ventures!
+     <p class="speech">Here's good luck to Fred'ric's ventures!
           Fred'ric's out of his indentures.
           Pour, O pour the pirate sherry;
           Fill, O fill the pirate glass;
@@ -83,9 +83,9 @@
           Let the pirate bumper pass.</p>
      <p class="direction direction:hover">(FREDERIC rises and comes forward with PIRATE KING, who enters)</p>
      <h6 class="KING"> KING: </h6>
-     <p>Yes, Frederic, from to-day you rank as a full-blown
+     <p class="speech">Yes, Frederic, from to-day you rank as a full-blown
           member of our band.</p>
-     <h6 class="ALL">ALL:</h6 <p> Hurrah!</p>
+     <h6 class="ALL">ALL:</h6 <p class="speech"> Hurrah!</p>
 
 
      <h5 class="song">SONG — RUTH</h5>
@@ -123,6 +123,7 @@
           </tr>
 
      </table>
+     <li> <a href="opera2.html"> opera2.html</a> </li>
 
 
 
