--- a/opera.html
+++ b/opera.html
@@ -4,6 +4,7 @@
 <head>
      <title>html with css page</title>
      <link rel="stylesheet" href="gs.css">
+     <script src="https://kit.fontawesome.com/a28779a14e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -125,9 +126,13 @@
      </table>
      <li> <a href="opera2.html"> opera2.html</a> </li>
 
+     <img src="download.jpg" alt ="image">
 
-
-
+     <ul>
+          <li><a href="opera.html">Home</a></li>
+          <li><a href="opera2.html">opera2</a></li>
+        </ul>
+        <i class="fa-solid fa-camera" style="font-size: 100px;"></i>
 </body>
 
 </html>
