--- a/opera2.html
+++ b/opera2.html
@@ -27,6 +27,10 @@
   <p class="speech">True.</p>   
   <li> <a href="opera.html"> opera.html</a> </li>
 
+  <ul>
+    <li><a href="opera.html">opera</a></li>
+    <li><a href="opera2.html">home</a></li>
+  </ul>
     
 </body>
 </html>
