--- a/opera.html
+++ b/opera.html
@@ -124,8 +124,7 @@
           </tr>
 
      </table>
-     <li> <a href="opera2.html"> opera2.html</a> </li>
-
+          <a href="opera2.html"> opera2.html</a> </li>
      <img src="download.jpg" alt ="image">
 
      <ul>
